--- a/index.html
+++ b/index.html
@@ -1522,8 +1522,8 @@
 					<td class="tleft"></td><!-- 4depth -->
 					<td class="tleft"></td><!-- 5depth -->
 					<td class="tleft"><a href="html/파일명.html" target="_blank">파일명.html</a></td><!-- 파일링크 -->
-					<td>홍성호</td>
-					<span class="finish">완료</span>
+					<td>박성광</td>
+					<td><span class=""></span></td>
 					<td><span style="color:tomato"></span></td>
 					<td class="tleft"></td>
 				</tr>
@@ -1655,7 +1655,7 @@
 					<td class="tleft">공지관리목록</td><!-- 3depth -->
 					<td class="tleft"></td><!-- 4depth -->
 					<td class="tleft"></td><!-- 5depth -->
-					<td class="tleft"><a href="html/시스템관리자_공지관리_리스트.html" target="_blank">시스템관리자_공지관리_리스트.html</a></td><!-- 파일링크 -->
+					<td class="tleft"><a href="html/파일명.html" target="_blank">파일명.html</a></td><!-- 파일링크 -->
 					<td>박성광</td>
 					<td><span class=""></span></td>
 					<td><span style="color:tomato"></span></td>
