--- a/html/법령_목록.html
+++ b/html/법령_목록.html
@@ -225,12 +225,12 @@
                         <div class="tree-menu is-active">
                             <ul class="tree-list" id="coverment">
                                 <li>
-                                    <button type="button" class="haschildren one-depth all">
+                                    <div class="haschildren one-depth all">
                                         <i></i> 전체
-                                    </button>
+                                    </div>
                                     <ul class="two-depth-list">
                                         <li>
-                                            <button type="button"  class="haschildren two-depth-button"><i></i> 부처</button>
+                                            <div class="haschildren two-depth-button"><i></i> 부처</div>
                                             <ul class="tree-depth-list">
                                                 <li class="is-active"><a href="#">고용노동부</a></li>
                                                 <li><a href="#">과학기술정보통신부</a></li>
@@ -253,7 +253,7 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <button type="button"  class="haschildren two-depth-button"><i></i> 청</button>
+                                            <div  class="haschildren two-depth-button"><i></i> 청</div>
                                             <ul class="tree-depth-list">
                                                 <li><a href="#">검찰청</a></li>
                                                 <li><a href="#">경찰청</a></li>
@@ -275,7 +275,7 @@
                                             </ul>
                                         </li>    
                                         <li>
-                                            <button type="button"  class="haschildren two-depth-button"><i></i> 부처</button>
+                                            <div  class="haschildren two-depth-button"><i></i> 부처</div>
                                             <ul class="tree-depth-list">
                                                 <li><a href="#">고용노동부</a></li>
                                                 <li><a href="#">과학기술정보통신부</a></li>
@@ -298,7 +298,7 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <button type="button" class="haschildren two-depth-button"><i></i> 청</button>
+                                            <div class="haschildren two-depth-button"><i></i> 청</div>
                                             <ul class="tree-depth-list">
                                                 <li><a href="#">검찰청</a></li>
                                                 <li><a href="#">경찰청</a></li>
@@ -324,14 +324,14 @@
                             </ul>
                         </div>
                         <div class="tree-menu">
-                            <ul class="tree-list" id="law-list">
+                            <ul class="tree-list" id="law-list">                              
                                 <li>
-                                    <button type="button" class="haschildren one-depth all">
+                                    <div class="haschildren one-depth all">
                                         <i></i> 전체
-                                    </button>
+                                    </div>
                                     <ul class="two-depth-list">
                                         <li>
-                                            <button type="button"  class="haschildren two-depth-button"><i></i> 부처</button>
+                                            <div class="haschildren two-depth-button"><i></i> 부처</div>
                                             <ul class="tree-depth-list">
                                                 <li class="is-active"><a href="#">고용노동부</a></li>
                                                 <li><a href="#">과학기술정보통신부</a></li>
@@ -354,7 +354,7 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <button type="button"  class="haschildren two-depth-button"><i></i> 청</button>
+                                            <div  class="haschildren two-depth-button"><i></i> 청</div>
                                             <ul class="tree-depth-list">
                                                 <li><a href="#">검찰청</a></li>
                                                 <li><a href="#">경찰청</a></li>
@@ -376,7 +376,7 @@
                                             </ul>
                                         </li>    
                                         <li>
-                                            <button type="button"  class="haschildren two-depth-button"><i></i> 부처</button>
+                                            <div  class="haschildren two-depth-button"><i></i> 부처</div>
                                             <ul class="tree-depth-list">
                                                 <li><a href="#">고용노동부</a></li>
                                                 <li><a href="#">과학기술정보통신부</a></li>
@@ -399,7 +399,7 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <button type="button" class="haschildren two-depth-button"><i></i> 청</button>
+                                            <div class="haschildren two-depth-button"><i></i> 청</div>
                                             <ul class="tree-depth-list">
                                                 <li><a href="#">검찰청</a></li>
                                                 <li><a href="#">경찰청</a></li>
